<resources>
    <string name="app_name">Currency Converter</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="menu_currencyConverter">Currency Converter</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_cardHolder">Card Holder</string>
    <string name="menu_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_search">Search</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="NA" translatable="false">N/A</string>
    <string name="no_tags">NO TAGS</string>
    <string name="cards_total">\ Cards total</string>
    <string name="usd" translatable="false">USD</string>
    <string name="aed" translatable="false">AED</string>
    <string name="eur" translatable="false">EUR</string>
    <string name="gbp" translatable="false">GBP</string>
    <string name="aud" translatable="false">AUD</string>
    <string name="cad" translatable="false">CAD</string>
    <string name="account_type">Account Type :</string>
    <string name="created_at">Created at :</string>
    <string name="contact_info">Contact Info</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="decision_maker">Decision Maker</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>

    <string-array name="themes">
        <item>Normal</item>
        <item>Dark</item>
        <item>Christmas</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
        <item>Gujarati</item>
    </string-array>

    <string name="def_language">English</string>
    <string name="def_theme">Normal</string>
    <string name="language_dialog_title">Language</string>
    <string name="theme_dialog_title">Theme</string>
    <string name="settings">Settings</string>

    <string name="company_info">Company Info</string>
    <string name="company">Company</string>
    <string name="industry">Industry</string>
    <string name="contact_type">Contact Type</string>
    <string name="tel" translatable="false">TEL</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="campaign_email">Campaign Email</string>
    <string name="tags">Tags</string>
    <string name="convert_to">Convert to</string>
    <string name="from_inr">from INR</string>
    <string name="enter_value_to_be_converted">Enter INR to be converted</string>
    <string name="converted_value_is">Converted values are</string>
    <string name="enter_first_value">Enter First Value</string>
    <string name="enter_second_value">Enter Second Value</string>
    <string name="answer">Answer</string>
    <string name="modulus" translatable="false">%</string>
    <string name="divide" translatable="false">/</string>
    <string name="multiply" translatable="false">X</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="equalTo" translatable="false">=</string>
    <string name="prefName_display">Display</string>
    <string name="us_dollar">US Dollar</string>
    <string name="emirati_dirhams">Emirates Dirham</string>
    <string name="australian_dollar">Australian Dollar</string>
    <string name="back_button" translatable="false"><![CDATA[<<]]></string>
    <string name="ac" translatable="false">AC</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_0" translatable="false">0</string>
    <string name="dot" translatable="false">.</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_download">Download</string>
    <string name="my_transition" translatable="false">MyTransition</string>
    <string name="token">Token</string>
    <string name="paste_link">Paste Link</string>
    <string name="_00_00_00" translatable="false">00:00:00</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
</resources>