<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_currencyConverter"
            android:icon="@drawable/ic_currency_converter"
            android:title="@string/menu_currencyConverter" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_cardHolder"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_cardHolder" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_alarm"
            android:title="@string/menu_alarm" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_cloud_download"
            android:title="@string/menu_download" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>