<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="display"
        android:title="@string/prefName_display">

        <ListPreference
            android:defaultValue="@string/def_theme"
            android:entries="@array/themes"
            android:entryValues="@array/themes"
            android:key="theme"
            app:useSimpleSummaryProvider="true"
            android:title="@string/theme_dialog_title"
            android:dialogTitle="@string/theme_dialog_title"/>

        <ListPreference
            android:defaultValue="@string/def_language"
            android:entries="@array/languages"
            android:entryValues="@array/languages"
            android:key="language"
            app:useSimpleSummaryProvider="true"
            android:title="@string/language_dialog_title"
            android:dialogTitle="@string/language_dialog_title"/>
    </PreferenceCategory>
</PreferenceScreen>