<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="14"
    tools:context=".ui.calculator.CalculatorFragment">

    <include
        android:id="@+id/result_layout_calculator"
        layout="@layout/layout_calculator_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator_pink"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/ac"
                android:textColor="@color/darkPink"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/back_button"
                android:textColor="?attr/txtNormalColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_modulus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator_orange"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/modulus"
                android:textColor="@color/whiteColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator_orange"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/divide"
                android:textColor="@color/whiteColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_7"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_8"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_9"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_multiple"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator_orange"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/multiply"
                android:textColor="@color/whiteColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_4"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_5"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_6"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator_orange"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/minus"
                android:textColor="@color/whiteColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_1"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_2"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/_3"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator_orange"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/plus"
                android:textColor="@color/whiteColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="2"
                android:background="@drawable/btn_background_calculator"
                android:elevation="5dp"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:paddingHorizontal="50dp"
                android:text="@string/_0"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/dot"
                android:textColor="?attr/txtNormalColor"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_calculator_green"
                android:fontFamily="@font/black_ops_one"
                android:minHeight="80dp"
                android:text="@string/equalTo"
                android:textColor="@color/whiteColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>